--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nova+Square&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
 			rel="stylesheet"
 		/>
 	</head>
@@ -23,7 +23,7 @@
 			>
 				<a class="block text-teal-600" href="#">
 					<span class="sr-only">Home</span>
-					<img src="./assets/HW.png" alt="logo" class="h-10 w-10">
+					<img src="./assets/HW.png" alt="logo" class="h-10 w-10 rounded-full" />
 				</a>
 
 				<div class="flex items-center justify-end md:justify-between">
@@ -36,13 +36,17 @@
 			</div>
 		</header>
 		<div class="min-h-fit text-white rounded-lg mx-auto">
-			<h1 class="text-6xl font-bold mb-4 text-center title my-4">
-				Rock Paper Scissors
-			</h1>
-			<div class="grid grid-cols-2 my-10 gap-20">
+			<div class="mb-4 space-y-4">
+				<h1 class="text-7xl font-extrabold text-center title tracking-wider">Hand Wars</h1>
+				<p class="text-xl text-muted-foreground text-center text-neutral-900/60">
+					Ready to Rock Paper Scissors
+				</p>
+			</div>
+			<div class="grid grid-cols-2 my-10 gap-20 text-black font-medium">
 				<div class="flex justify-start items-center rounded-lg">
-					<div class="text-center space-y-5">
+					<div class="text-center space-y-3">
 						<p class="text-xl">You</p>
+						<p class="text-lg font-bold">Score: <span id="user-score">0</span></p>
 						<img
 							id="user-image"
 							src="./assets/img/rock_user.png"
@@ -53,6 +57,7 @@
 				<div class="flex justify-end items-center rounded-lg">
 					<div class="text-center space-y-5">
 						<p class="text-xl">Opponent</p>
+						<p class="text-xl">Computer Score: <span id="computer-score">0</span></p>
 						<img
 							id="computer-image"
 							src="./assets/img/rock_comp.png"
@@ -61,10 +66,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="flex justify-center gap-4 mt-4 text-white">
-			<p class="text-xl">Your Score: <span id="user-score">0</span></p>
-			<p class="text-xl">Computer Score: <span id="computer-score">0</span></p>
 		</div>
 
 		<p
