--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="comp">
 					<div id="side-content">
-						<p id="user">Opponent</p>
+						<p id="user">Computer</p>
 						<p>Computer Score: <span id="computer-score">0</span></p>
 						<img id="computer-image" src="./assets/img/rock_comp.png" />
 					</div>
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 
-		<p id="result"></p>
+		<p id="result">Choose your move!</p>
 
 		<div class="button-group">
 			<button id="rock" class="btn-custom">Rock</button>
